<resources>
    <string name="app_name">projectHellgi</string>
    <string name="registerButton">회원가입</string>
    <string name="logInButton">로그인</string>
    <string name="회원가입텍스트">회원가입</string>
    <string name="UserEmail">userID</string>
    <string name="UserPW">userPW</string>
    <string name="Name">userName</string>
    <string name="아이디">userID</string>
    <string name="비밀번호">userPW</string>
    <string name="이름힌트">userName</string>
    <string name="등록">회원가입</string>
    <string name="중복확인">중복확인</string>
    <string name="id">userID</string>
    <string name="pw">userPW</string>
    <string name="password_check">Password Check</string>
    <string name="관심운동선택">관심운동선택</string>
    <string name="맨몸운동">맨몸운동</string>
    <string name="중량운동">중량운동</string>
    <string name="스포츠">스포츠</string>
    <string name="기타">기타</string>
    <string name="확인">확인</string>
    <string name="이름">이름</string>
    <string name="한줄소개">한줄소개</string>
    <string name="기타운동">기타운동</string>
    <string name="기타운동입력">기타운동입력</string>
    <string name="메세지">메세지</string>
    <string name="프로필">프로필</string>
    <string name="홈">홈</string>
    <string name="운동변경">운동변경</string>
    <string name="title_activity_add_photo_page">AddPhoto_page</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="사진">사진</string>
</resources>