<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editOtherExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/기타운동입력"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.773"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="189dp"
        android:layout_height="43dp"
        android:text="@string/관심운동선택"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/fullBodyExercise_btn"
        android:layout_width="128dp"
        android:layout_height="78dp"
        android:layout_marginBottom="40dp"
        android:text="@string/맨몸운동"
        app:layout_constraintBottom_toTopOf="@+id/sports_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.769"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/weightExercise_btn"
        android:layout_width="128dp"
        android:layout_height="78dp"
        android:layout_marginBottom="40dp"
        android:text="@string/중량운동"
        app:layout_constraintBottom_toTopOf="@+id/other_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.769"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/sports_btn"
        android:layout_width="128dp"
        android:layout_height="78dp"
        android:layout_marginBottom="20dp"
        android:text="@string/스포츠"
        app:layout_constraintBottom_toTopOf="@+id/editOtherExercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/other_btn"
        android:layout_width="128dp"
        android:layout_height="78dp"
        android:layout_marginBottom="20dp"
        android:text="@string/기타운동"
        app:layout_constraintBottom_toTopOf="@+id/editOtherExercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/choice_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/확인"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editOtherExercise"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>