<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="203dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:text="@string/관심운동선택"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/fullBodyExercise_btn"
        android:layout_width="127dp"
        android:layout_height="119dp"
        android:layout_marginStart="52dp"
        android:text="@string/맨몸운동"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sports_btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.14"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/weightExercise_btn"
        android:layout_width="127dp"
        android:layout_height="119dp"
        android:layout_marginEnd="52dp"
        android:text="@string/중량운동"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/other_btn"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.14"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/sports_btn"
        android:layout_width="127dp"
        android:layout_height="119dp"
        android:layout_marginStart="52dp"
        android:text="@string/스포츠"
        app:layout_constraintBottom_toTopOf="@+id/choice_btn"
        app:layout_constraintEnd_toStartOf="@+id/choice_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullBodyExercise_btn"
        app:layout_constraintVertical_bias="0.502"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/other_btn"
        android:layout_width="127dp"
        android:layout_height="119dp"
        android:layout_marginEnd="52dp"
        android:text="@string/기타"
        app:layout_constraintBottom_toTopOf="@+id/choice_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/choice_btn"
        app:layout_constraintTop_toBottomOf="@+id/weightExercise_btn"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/choice_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="@string/확인"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>